Improved SMART support (including NVMe)

--- a/plugins/dynamix/DiskSettings.page
+++ b/plugins/dynamix/DiskSettings.page
@@ -24,6 +24,13 @@ function displayTemp($temp) {
   return $display['unit']=='F' ? round(9/5*$temp)+32 : $temp;
 }
 ?>
+<style>
+<?if (strstr('azure,gray',$display['theme'])):?>
+span.code{display:inline-block;width:186px}
+<?else:?>
+span.code{display:inline-block;width:138px}
+<?endif;?>
+</style>
 <script>
 function doDispatch(form) {
   var fields = {};
@@ -261,15 +268,17 @@ Default SMART notification tolerance level:
 
 Default SMART controller type:
 : <select name="smType" size="1" onchange="setIndex(this.form)">
-  <?=mk_option($var['smType'], "", "Automatic")?>
-  <?=mk_option($var['smType'], "-d ata", "ATA")?>
-  <?=mk_option($var['smType'], "-d sat", "SATA")?>
-  <?=mk_option($var['smType'], "-d scsi", "SCSI")?>
-  <?=mk_option($var['smType'], "-d 3ware", "3Ware")?>
-  <?=mk_option($var['smType'], "-d areca", "Areca")?>
-  <?=mk_option($var['smType'], "-d hpt", "HighPoint")?>
-  <?=mk_option($var['smType'], "-d marvell", "Marvell")?>
-  <?=mk_option($var['smType'], "-d megaraid", "MegaRAID")?>
+  <?=mk_option($disk['smType'], "", "Automatic")?>
+  <?=mk_option($disk['smType'], "-d ata", "ATA")?>
+  <?=mk_option($disk['smType'], "-d nvme", "NVMe")?>
+  <?=mk_option($disk['smType'], "-d sat", "SAT")?>
+  <?=mk_option($disk['smType'], "-d scsi", "SCSI")?>
+  <?=mk_option($disk['smType'], "-d 3ware", "3Ware")?>
+  <?=mk_option($disk['smType'], "-d aacraid", "Adaptec")?>
+  <?=mk_option($disk['smType'], "-d areca", "Areca")?>
+  <?=mk_option($disk['smType'], "-d hpt", "HighPoint")?>
+  <?=mk_option($disk['smType'], "-d marvell", "Marvell")?>
+  <?=mk_option($disk['smType'], "-d megaraid", "MegaRAID")?>
   </select>
 
 > By default automatic controller selection is done by smartctl to read the SMART information. Certain controllers however need specific settings for smartctl to work.
@@ -280,10 +289,10 @@ Default SMART controller type:
 Default SMART attribute notifications:
 : <input type="text" name="smCustom" value="<?=$var['smCustom']?>" class="narrow">Custom attributes (use comma to separate numbers)
 
-  <?for ($x = 0; $x < count($preselect); $x++):?>
+<?for ($x = 0; $x < count($preselect); $x++):?>
 &nbsp;
-: <input type="checkbox" name="at<?=$x?>" value="<?=$preselect[$x]['code']?>"<?=in_array($preselect[$x]['code'],$events)?' checked':''?>><span style="display:inline-block;width:136px"><?=$preselect[$x]['code']?></span><?=$preselect[$x]['text']?>
-  <?endfor;?>
+: <input type="checkbox" name="at<?=$x?>" value="<?=$preselect[$x]['code']?>"<?=in_array($preselect[$x]['code'],$events)?' checked':''?>><span class="code">Attribute = <?=$preselect[$x]['code']?></span><?=$preselect[$x]['text']?>
+<?endfor;?>
 
 > The user can enable or disable notifications for the given SMART attributes. It is recommended to keep the default, which is ALL selected attributes,
 > when certain attributes are not present on your hard disk or do not provide the correct information, these may be excluded.
