--- a/plugins/dynamix/ArrayOperation.page
+++ b/plugins/dynamix/ArrayOperation.page
@@ -44,6 +44,13 @@ function status_indicator() {
   }
   return "<a class='info nohand' onclick='return false'><img src='$ball' class='icon'><span>$help</span></a>";
 }
+function last_history_log() {
+  $log = '/boot/config/parity-checks.log';
+  if (!file_exists($log)) return [0,0,0,0,0];
+  list($date,$duration,$speed,$status,$error) = explode('|',exec("tail -1 $log"));
+  list($y,$m,$d,$t) = preg_split('/ +/',$date);
+  return [strtotime("$d-$m-$y $t"), $duration, $speed, $status, $error];
+}
 ?>
 <style>
 td.gap{padding-left:26px!important}
@@ -242,29 +249,33 @@ $(function(){
 <?      elseif (strstr($var['mdResyncAction'],"check")):?>
           <tr><td>Parity is valid.</td><td><input type="submit" name="cmdCheck" value="Check"></td><td><strong>Check</strong> will start <strong>Parity-Check</strong>.
           <br><input type="checkbox" name="optionCorrect" value="correct" checked><small>Write corrections to parity</small></td></tr>
-<?      endif;
-        if ($var['sbSyncExit']!=0):?>
-          <tr><td></td><td><input type="button" value="History" onclick="openBox('/webGui/include/ParityHistory.php','Parity/Read-Check History',600,540,false)"></td>
+<?      endif;?>
+        <tr><td></td><td><input type="button" value="History" onclick="openBox('/webGui/include/ParityHistory.php','Parity/Read-Check History',600,540,false)"></td>
+<?      if ($var['sbSyncExit']!=0):?>
           <td>Last check incomplete on <strong><?=my_time($var['sbSynced2']).day_count($var['sbSynced2'])?></strong><?if ($var['sbSynced2']):?>, finding <strong><?=$var['sbSyncErrs']?></strong> error<?=$var['sbSyncErrs']==1?'':'s'?>.<?endif;?>
           <br><i class="fa fa-dot-circle-o icon"></i><small>Error code: <?=my_error($var['sbSyncExit'])?></small></td></tr>
-<?      elseif ($var['sbSynced']==0):?>
-          <tr><td></td><td><input type="button" value="History" onclick="openBox('/webGui/include/ParityHistory.php','Parity/Read-Check History',600,540,false)"></td><td>Last checked on <strong><?=my_time(0).day_count(0)?></strong>
-          <br><i class="fa fa-clock-o icon"></i><small>Duration: <?=my_check(0,0)?></small></td></tr>
-<?      elseif ($var['sbSynced2']==0):?>
-          <tr><td></td><td><input type="button" value="History" onclick="openBox('/webGui/include/ParityHistory.php','Parity/Read-Check History',600,540,false)"></td>
-<?        list($entry,$duration,$speed,$status,$error) = explode('|', read_parity_log($var['sbSynced']));
+<?      elseif ($var['sbSynced']==0):
+          list($date,$duration,$speed,$status,$error) = last_history_log();?>
+<?        if ($status==0):?>
+            <td>Last checked on <strong><?=my_time($date).day_count($date)?></strong>, finding <strong><?=$error?></strong> error<?=$error==1?'':'s'?>.
+            <br><i class="fa fa-clock-o icon"></i><small>Duration: <?=my_check($duration,$speed)?></small></td></tr>
+<?        else:?>
+            <td>Last check incomplete on <strong><?=my_time($date).day_count($date)?></strong>, finding <strong><?=$error?></strong> error<?=$error==1?'':'s'?>.
+            <br><i class="fa fa-dot-circle-o icon"></i><small>Error code: <?=my_error($status)?></small>
+<?        endif;
+        elseif ($var['sbSynced2']==0):
+          list($date,$duration,$speed,$status,$error) = explode('|', read_parity_log($var['sbSynced']));
           if ($status==0):?>
             <td>Last checked on <strong><?=my_time($var['sbSynced']).day_count($var['sbSynced'])?></strong>, finding <strong><?=$error?></strong> error<?=$error==1?'':'s'?>.
             <br><i class="fa fa-clock-o icon"></i><small>Duration: <?=my_check($duration,$speed)?></small>
 <?        else:?>
             <td>Last check incomplete on <strong><?=my_time($var['sbSynced']).day_count($var['sbSynced'])?></strong>, finding <strong><?=$error?></strong> error<?=$error==1?'':'s'?>.
-            <br><i class="fa fa-dot-circle-o icon"></i><small>Error code: <?=$status?></small>
+            <br><i class="fa fa-dot-circle-o icon"></i><small>Error code: <?=my_error($status)?></small>
 <?        endif;?>
           </td></tr>
 <?      else:
           $duration = $var['sbSynced2']-$var['sbSynced'];
           $speed = $duration?my_scale($var['mdResyncSize']*1024/$duration,$unit,1)." $unit/sec":'';?>
-          <tr><td></td><td><input type="button" value="History" onclick="openBox('/webGui/include/ParityHistory.php','Parity/Read-Check History',600,540,false)"></td>
           <td>Last check completed on <strong><?=my_time($var['sbSynced2']).day_count($var['sbSynced2'])?></strong>, finding <strong><?=$var['sbSyncErrs']?></strong> error<?=$var['sbSyncErrs']==1?'':'s'?>.
           <br><i class="fa fa-clock-o icon"></i><small>Duration: <?=my_check($duration,$speed)?></small></td></tr>
 <?      endif;
