--- a/plugins/dynamix/ArrayOperation.page
+++ b/plugins/dynamix/ArrayOperation.page
@@ -44,13 +44,6 @@ function status_indicator() {
   }
   return "<a class='info nohand' onclick='return false'><img src='$ball' class='icon'><span>$help</span></a>";
 }
-function last_history_log() {
-  $log = '/boot/config/parity-checks.log';
-  if (!file_exists($log)) return [0,0,0,0,0];
-  list($date,$duration,$speed,$status,$error) = explode('|',exec("tail -1 $log"));
-  list($y,$m,$d,$t) = preg_split('/ +/',$date);
-  return [strtotime("$d-$m-$y $t"), $duration, $speed, $status, $error];
-}
 ?>
 <style>
 td.gap{padding-left:26px!important}
@@ -255,7 +248,7 @@ $(function(){
           <td>Last check incomplete on <strong><?=my_time($var['sbSynced2']).day_count($var['sbSynced2'])?></strong><?if ($var['sbSynced2']):?>, finding <strong><?=$var['sbSyncErrs']?></strong> error<?=$var['sbSyncErrs']==1?'':'s'?>.<?endif;?>
           <br><i class="fa fa-dot-circle-o icon"></i><small>Error code: <?=my_error($var['sbSyncExit'])?></small></td></tr>
 <?      elseif ($var['sbSynced']==0):
-          list($date,$duration,$speed,$status,$error) = last_history_log();?>
+          list($date,$duration,$speed,$status,$error) = last_parity_log();?>
 <?        if ($status==0):?>
             <td>Last checked on <strong><?=my_time($date).day_count($date)?></strong>, finding <strong><?=$error?></strong> error<?=$error==1?'':'s'?>.
             <br><i class="fa fa-clock-o icon"></i><small>Duration: <?=my_check($duration,$speed)?></small></td></tr>
